Bugfixing for new Mall Routing

--- a/stripper/maps/c1m3_mall.cfg
+++ b/stripper/maps/c1m3_mall.cfg
@@ -127,9 +127,10 @@ add:
 	"classname" "logic_relay"
 	"OnTrigger" "relay_stairwell_closeTrigger0-1"
 	"OnTrigger" "case_pathPickRandom0-1"
+	
+	"OnTrigger" "trigger_glass_breakableEnable0-1"
+	"OnTrigger" "relay_breakglassEnable0-1"
 }
-
-
 
 {
 	"origin" "0 0 0"
@@ -166,7 +167,84 @@ add:
 	"OnTrigger" "door_hallway_lower4Unlock0-1"
 	"OnTrigger" "door_hallway_lower4aUnlock0-1"
 	"OnTrigger" "trigger_glass_breakableDisable0-1"
+	
+	"OnTrigger" "hard_route_blockerDisable0-1"
+	"OnTrigger" "hard_route_blockerDisableCollision0-1"
 }
+
+; SUPER HARD Route by untalented893
+
+{
+	;Removes glass from spawned escalator
+	"origin" "2147.62 -2589.29 305"
+	"classname" "func_breakable"
+}
+
+add:
+{
+	;Spawned escalator from event
+	"solid" "6"
+	"origin" "1968 -2768 120"
+	"angles" "0 135 0"
+	"model" "models/props_mall/mall_escalator2.mdl"
+	"classname" "prop_dynamic"
+	"targetname" "hard_route_blocker"
+}
+{
+	;Fence to right of store window (right)
+	"solid" "6"
+	"origin" "1372 -3043 285"
+	"angles" "0 90 0"
+	"model" "models/props_fortifications\barricade001_128_reference.mdl"
+	"classname" "prop_dynamic"
+	"targetname" "hard_route_blocker"
+}
+{
+	;Fence to right of store window (left)
+	"solid" "6"
+	"origin" "1482 -3043 285"
+	"angles" "0 90 0"
+	"model" "models/props_fortifications\barricade001_128_reference.mdl"
+	"classname" "prop_dynamic"
+	"targetname" "hard_route_blocker"
+}
+{
+	;Fence to left of store window (far right)
+	"solid" "6"
+	"origin" "2363 -2765 285"
+	"angles" "0 90 0"
+	"model" "models/props_fortifications\barricade001_128_reference.mdl"
+	"classname" "prop_dynamic"
+	"targetname" "hard_route_blocker"
+}
+{
+	;Fence to left of store window (middle right)
+	"solid" "6"
+	"origin" "2479 -2729 285"
+	"angles" "0 90 0"
+	"model" "models/props_fortifications\barricade001_128_reference.mdl"
+	"classname" "prop_dynamic"
+	"targetname" "hard_route_blocker"
+}
+{
+	;Fence to left of store window (middle left)
+	"solid" "6"
+	"origin" "2578 -2752 285"
+	"angles" "0 90 0"
+	"model" "models/props_fortifications\barricade001_128_reference.mdl"
+	"classname" "prop_dynamic"
+	"targetname" "hard_route_blocker"
+}
+{
+	;Fence to left of store window (far left)
+	"solid" "6"
+	"origin" "2685 -2778 285"
+	"angles" "0 90 0"
+	"model" "models/props_fortifications\barricade001_128_reference.mdl"
+	"classname" "prop_dynamic"
+	"targetname" "hard_route_blocker"
+}
+
 
 
 
@@ -261,78 +339,4 @@ filter:
 	;Prop Removal - Mannequin to get back over the point of no return
 	"origin" "806.623 -1898.41 320"
 	"classname" "logic_case"
-}
-
-; SUPER HARD Route by untalented893
-
-{
-	;Removes glass from spawned escalator
-	"origin" "2147.62 -2589.29 305"
-	"classname" "func_breakable"
-	"hammerid" "8568399"
-}
-
-add:
-{
-	;Spawned escalator from event
-	"solid" "6"
-	"origin" "1968 -2768 120"
-	"angles" "0 135 0"
-	"model" "models/props_mall/mall_escalator2.mdl"
-	"classname" "prop_dynamic"
-	"targetname" "hard_route_blocker"
-}
-{
-	;Fence to right of store window (right)
-	"solid" "6"
-	"origin" "1372 -3043 285"
-	"angles" "0 90 0"
-	"model" "models/props_fortifications\barricade001_128_reference.mdl"
-	"classname" "prop_dynamic"
-	"targetname" "hard_route_blocker"
-}
-{
-	;Fence to right of store window (left)
-	"solid" "6"
-	"origin" "1482 -3043 285"
-	"angles" "0 90 0"
-	"model" "models/props_fortifications\barricade001_128_reference.mdl"
-	"classname" "prop_dynamic"
-	"targetname" "hard_route_blocker"
-}
-{
-	;Fence to left of store window (far right)
-	"solid" "6"
-	"origin" "2363 -2765 285"
-	"angles" "0 90 0"
-	"model" "models/props_fortifications\barricade001_128_reference.mdl"
-	"classname" "prop_dynamic"
-	"targetname" "hard_route_blocker"
-}
-{
-	;Fence to left of store window (middle right)
-	"solid" "6"
-	"origin" "2479 -2729 285"
-	"angles" "0 90 0"
-	"model" "models/props_fortifications\barricade001_128_reference.mdl"
-	"classname" "prop_dynamic"
-	"targetname" "hard_route_blocker"
-}
-{
-	;Fence to left of store window (middle left)
-	"solid" "6"
-	"origin" "2578 -2752 285"
-	"angles" "0 90 0"
-	"model" "models/props_fortifications\barricade001_128_reference.mdl"
-	"classname" "prop_dynamic"
-	"targetname" "hard_route_blocker"
-}
-{
-	;Fence to left of store window (far left)
-	"solid" "6"
-	"origin" "2685 -2778 285"
-	"angles" "0 90 0"
-	"model" "models/props_fortifications\barricade001_128_reference.mdl"
-	"classname" "prop_dynamic"
-	"targetname" "hard_route_blocker"
 }
