Updated to current state

--- a/stripper/maps/c1m3_mall.cfg
+++ b/stripper/maps/c1m3_mall.cfg
@@ -11,11 +11,6 @@ modify:
 		"targetname" "removeme"
 	}
 	
-	
-; ent_fire trigger_glass_breakable enable
-; ent_fire relay_breakglass enable
-
-	
 ; also, second round bugfixing
 	
 	match:
@@ -62,6 +57,32 @@ modify:
 		
 		"OnTrigger" "relay_door_minifinaleEnable0-1"
 		"OnTrigger" "instructor_doorEnable0-1"
+	}
+	
+	match:
+	{
+		"OnUser1" "escalator_lower_01-railing_breakableKill0-1"
+	}
+	delete:
+	{
+		"OnUser1" "escalator_lower_01-railing_breakableKill0-1"
+	}
+	insert:
+	{
+		"OnUser1" "escalator_lower_01-railing_breakableDisable0-1"
+	}
+	
+	match:
+	{
+		"OnUser1" "escalator_lower_02-railing_breakableKill0-1"
+	}
+	delete:
+	{
+		"OnUser1" "escalator_lower_02-railing_breakableKill0-1"
+	}
+	insert:
+	{
+		"OnUser1" "escalator_lower_02-railing_breakableDisable0-1"
 	}
 }
 
@@ -130,8 +151,14 @@ add:
 	
 	"OnTrigger" "trigger_glass_breakableEnable0-1"
 	"OnTrigger" "relay_breakglassEnable0-1"
+	
+	"OnTrigger" "hard_route_blockerEnable0-1"
+	"OnTrigger" "hard_route_blockerEnableCollision0-1"
+	
+	"OnTrigger" "relay_routing_spawn_lower_lift_1Trigger0-1"
+	"OnTrigger" "relay_routing_spawn_lower_lift_2Trigger0-1"
 }
-
+	
 {
 	"origin" "0 0 0"
 	"targetname" "relay_routing_wipe"
@@ -170,7 +197,23 @@ add:
 	
 	"OnTrigger" "hard_route_blockerDisable0-1"
 	"OnTrigger" "hard_route_blockerDisableCollision0-1"
+	
+	"OnTrigger" "escalator_lower_01-railing_breakableEnable0-1"
+	"OnTrigger" "escalator_lower_01-navblockerBlockNav0-1"
+	"OnTrigger" "escalator_lower_01-railingEnable0-1"
+	"OnTrigger" "escalator_lower_01-liftDisable0-1"
+	"OnTrigger" "escalator_lower_01-liftDisableCollision0-1"
+	"OnTrigger" "escalator_lower_01-brush_lift_collisionDisable0-1"
+
+	"OnTrigger" "escalator_lower_02-railing_breakableEnable0-1"
+	"OnTrigger" "escalator_lower_02-navblockerBlockNav0-1"
+	"OnTrigger" "escalator_lower_02-railingEnable0-1"
+	"OnTrigger" "escalator_lower_02-liftDisable0-1"
+	"OnTrigger" "escalator_lower_02-liftDisableCollision0-1"
+	"OnTrigger" "escalator_lower_02-brush_lift_collisionDisable0-1"
 }
+
+
 
 ; SUPER HARD Route by untalented893
 
@@ -179,8 +222,6 @@ add:
 	"origin" "2147.62 -2589.29 305"
 	"classname" "func_breakable"
 }
-
-add:
 {
 	;Spawned escalator from event
 	"solid" "6"
@@ -245,8 +286,36 @@ add:
 	"targetname" "hard_route_blocker"
 }
 
+; just making sure both lower lifts exist - Atomic
+{
+	"origin" "0 0 0"
+	"targetname" "relay_routing_spawn_lower_lift_1"
+	"StartDisabled" "0"
+	"spawnflags" "0"
+	"classname" "logic_relay"
+	
+	"OnTrigger" "escalator_lower_01-railing_breakableDisable0-1"
+	"OnTrigger" "escalator_lower_01-navblockerUnblockNav0-1"
+	"OnTrigger" "escalator_lower_01-railingDisable0-1"
+	"OnTrigger" "escalator_lower_01-liftEnable0-1"
+	"OnTrigger" "escalator_lower_01-liftEnableCollision0-1"
+	"OnTrigger" "escalator_lower_01-brush_lift_collisionEnable0-1"
+}
 
-
+{
+	"origin" "0 0 0"
+	"targetname" "relay_routing_spawn_lower_lift_2"
+	"StartDisabled" "0"
+	"spawnflags" "0"
+	"classname" "logic_relay"
+	
+	"OnTrigger" "escalator_lower_02-railing_breakableDisable0-1"
+	"OnTrigger" "escalator_lower_02-navblockerUnblockNav0-1"
+	"OnTrigger" "escalator_lower_02-railingDisable0-1"
+	"OnTrigger" "escalator_lower_02-liftEnable0-1"
+	"OnTrigger" "escalator_lower_02-liftEnableCollision0-1"
+	"OnTrigger" "escalator_lower_02-brush_lift_collisionEnable0-1"
+}
 
 
 
