--- a/stripper/maps/c2m1_highway.cfg
+++ b/stripper/maps/c2m1_highway.cfg
@@ -2,9 +2,36 @@ add:
 {
 	;Exploit Blocker - Shortcut over bush and truck
 	"solid" "6"
-	"origin" "4605 7411 -684"
+	"origin" "4605 7411 -739"
+	"angles" "0 180 0"
+	"model" "models/props_urban/fence002_256.mdl"
+	"classname" "prop_dynamic"
+}
+
+{
+	;Return Blocker - Fence to force point of no return
+	"solid" "6"
+	"origin" "3060 5510 -976"
 	"angles" "0 0 0"
-	"model" "models/props_wasteland/exterior_fence002d.mdl"
+	"model" "models/props_urban/fence002_256.mdl"
+	"classname" "prop_dynamic"
+}
+
+{
+	;Return Blocker - Fence to force point of no return
+	"solid" "6"
+	"origin" "3060 5382 -976"
+	"angles" "0 0 0"
+	"model" "models/props_urban/fence002_128.mdl"
+	"classname" "prop_dynamic"
+}
+
+{
+	;Return Blocker - Plank on ladder to force point of no return
+	"solid" "6"
+	"origin" "2385 6130 -640"
+	"angles" "0 0 0"
+	"model" "models/props_highway/plywood_02.mdl"
 	"classname" "prop_dynamic"
 }
 
@@ -16,7 +43,7 @@ add:
 	"model" "models/props_junk/gnome.mdl"
 	"classname" "prop_physics"
 	
-	"spawnflags" "2"
+	"spawnflags" "256"
 	"skin" "0"
 	"shadowcastdist" "0"
 	"rendermode" "0"
