--- a/stripper/maps/c5m1_waterfront.cfg
+++ b/stripper/maps/c5m1_waterfront.cfg
@@ -84,9 +84,8 @@ add:
 	"model" "models/props_interiors/refrigerator_industrial01.mdl"
 	"classname" "prop_dynamic"
 	"targetname" "multi_route_blocker"
+	"StartDisabled" "1"
 }
-
-
 
 
 {
