--- a/stripper/maps/c5m3_cemetery.cfg
+++ b/stripper/maps/c5m3_cemetery.cfg
@@ -116,5 +116,6 @@ add:
 	"angles" "0 90 0"
 	"model" "models/props_urban/gate_wall001_256.mdl"
 	"classname" "prop_dynamic"
+	"StartDisabled" "1"
 	"targetname" "exit_blocker"
 }
