--- a/stripper/maps/c5m2_park.cfg
+++ b/stripper/maps/c5m2_park.cfg
@@ -76,6 +76,7 @@ add:
 	"angles" "0 90 0"
 	"model" "models/props_wasteland/exterior_fence002c.mdl"
 	"classname" "prop_dynamic"
+	"StartDisabled" "1"
 	"targetname" "hard_route_blocker"
 }
 
@@ -88,6 +89,7 @@ add:
 	"angles" "0 90 0"
 	"model" "models/props_foliage/urban_hedge_256_128_high.mdl"
 	"classname" "prop_dynamic"
+	"StartDisabled" "1"
 	"targetname" "hard_route_blocker"
 }
 
@@ -98,6 +100,7 @@ add:
 	"angles" "0 180 0"
 	"model" "models/props_foliage/urban_hedge_256_128_high.mdl"
 	"classname" "prop_dynamic"
+	"StartDisabled" "1"
 	"targetname" "hard_route_blocker"
 }
 
@@ -108,6 +111,7 @@ add:
 	"angles" "0 65 0"
 	"model" "models/props_foliage/urban_hedge_256_128_high.mdl"
 	"classname" "prop_dynamic"
+	"StartDisabled" "1"
 	"targetname" "hard_route_blocker"
 }
 
@@ -118,6 +122,7 @@ add:
 	"angles" "0 90 0"
 	"model" "models/props_foliage/urban_hedge_256_128_high.mdl"
 	"classname" "prop_dynamic"
+	"StartDisabled" "1"
 	"targetname" "hard_route_blocker"
 }
 
@@ -130,6 +135,7 @@ add:
 	"angles" "0 0 0"
 	"model" "models/props_foliage/urban_hedge_128_64_high.mdl"
 	"classname" "prop_dynamic"
+	"StartDisabled" "1"
 	"targetname" "hard_route_blocker"
 }
 
@@ -142,6 +148,7 @@ add:
 	"angles" "0 90 0"
 	"model" "models/props_foliage/swamp_shrubwall_block_256.mdl"
 	"classname" "prop_dynamic"
+	"StartDisabled" "1"
 	"targetname" "hard_route_blocker"
 }
 
@@ -152,6 +159,7 @@ add:
 	"angles" "0 -130 0"
 	"model" "models/props_foliage/urban_hedge_256_128_high.mdl"
 	"classname" "prop_dynamic"
+	"StartDisabled" "1"
 	"targetname" "hard_route_blocker"
 }
 
@@ -164,6 +172,7 @@ add:
 	"angles" "0 0 0"
 	"model" "models/props_foliage/urban_hedge_256_128_high.mdl"
 	"classname" "prop_dynamic"
+	"StartDisabled" "1"
 	"targetname" "hard_route_blocker"
 }
 {
@@ -173,6 +182,7 @@ add:
 	"angles" "0 0 0"
 	"model" "models/props_foliage/urban_hedge_256_128_high.mdl"
 	"classname" "prop_dynamic"
+	"StartDisabled" "1"
 	"targetname" "hard_route_blocker"
 }
 {
@@ -182,6 +192,7 @@ add:
 	"angles" "0 0 0"
 	"model" "models/props_foliage/urban_hedge_256_128_high.mdl"
 	"classname" "prop_dynamic"
+	"StartDisabled" "1"
 	"targetname" "hard_route_blocker"
 }
 {
@@ -191,6 +202,7 @@ add:
 	"angles" "0 46 0"
 	"model" "models/props_foliage/urban_hedge_256_128_high.mdl"
 	"classname" "prop_dynamic"
+	"StartDisabled" "1"
 	"targetname" "hard_route_blocker"
 }
 {
@@ -200,6 +212,7 @@ add:
 	"angles" "0 46 0"
 	"model" "models/props_foliage/urban_hedge_256_128_high.mdl"
 	"classname" "prop_dynamic"
+	"StartDisabled" "1"
 	"targetname" "hard_route_blocker"
 }
 
@@ -212,6 +225,7 @@ add:
 	"angles" "0 -130 0"
 	"model" "models/props_foliage/urban_hedge_256_128_high.mdl"
 	"classname" "prop_dynamic"
+	"StartDisabled" "1"
 	"targetname" "hard_route_blocker"
 }
 
@@ -224,6 +238,7 @@ add:
 	"angles" "0 0 0"
 	"model" "models/props_foliage/urban_hedge_256_128_high.mdl"
 	"classname" "prop_dynamic"
+	"StartDisabled" "1"
 	"targetname" "hard_route_blocker"
 }
 
@@ -238,6 +253,7 @@ add:
 	"angles" "0 90 0"
 	"model" "models/props_wasteland/exterior_fence002c.mdl"
 	"classname" "prop_dynamic"
+	"StartDisabled" "1"
 	"targetname" "medium_route_blocker"
 }
 
@@ -250,6 +266,7 @@ add:
 	"angles" "0 90 0"
 	"model" "models/props_foliage/urban_hedge_256_128_high.mdl"
 	"classname" "prop_dynamic"
+	"StartDisabled" "1"
 	"targetname" "medium_route_blocker"
 }
 
@@ -260,6 +277,7 @@ add:
 	"angles" "0 180 0"
 	"model" "models/props_foliage/urban_hedge_256_128_high.mdl"
 	"classname" "prop_dynamic"
+	"StartDisabled" "1"
 	"targetname" "medium_route_blocker"
 }
 
@@ -270,6 +288,7 @@ add:
 	"angles" "0 65 0"
 	"model" "models/props_foliage/urban_hedge_256_128_high.mdl"
 	"classname" "prop_dynamic"
+	"StartDisabled" "1"
 	"targetname" "medium_route_blocker"
 }
 
@@ -280,6 +299,7 @@ add:
 	"angles" "0 90 0"
 	"model" "models/props_foliage/urban_hedge_256_128_high.mdl"
 	"classname" "prop_dynamic"
+	"StartDisabled" "1"
 	"targetname" "medium_route_blocker"
 }
 
@@ -292,6 +312,7 @@ add:
 	"angles" "0 0 0"
 	"model" "models/props_foliage/urban_hedge_128_64_high.mdl"
 	"classname" "prop_dynamic"
+	"StartDisabled" "1"
 	"targetname" "medium_route_blocker"
 }
 
@@ -304,6 +325,7 @@ add:
 	"angles" "0 90 0"
 	"model" "models/props_foliage/swamp_shrubwall_block_256.mdl"
 	"classname" "prop_dynamic"
+	"StartDisabled" "1"
 	"targetname" "medium_route_blocker"
 }
 
@@ -314,6 +336,7 @@ add:
 	"angles" "0 210 0"
 	"model" "models/props_foliage/urban_hedge_256_128_high.mdl"
 	"classname" "prop_dynamic"
+	"StartDisabled" "1"
 	"targetname" "medium_route_blocker"
 }
 {
@@ -323,6 +346,7 @@ add:
 	"angles" "0 210 0"
 	"model" "models/props_foliage/urban_hedge_256_128_high.mdl"
 	"classname" "prop_dynamic"
+	"StartDisabled" "1"
 	"targetname" "medium_route_blocker"
 }
 {
@@ -332,6 +356,7 @@ add:
 	"angles" "0 210 0"
 	"model" "models/props_foliage/urban_hedge_256_128_high.mdl"
 	"classname" "prop_dynamic"
+	"StartDisabled" "1"
 	"targetname" "medium_route_blocker"
 }
 {
@@ -341,6 +366,7 @@ add:
 	"angles" "0 210 0"
 	"model" "models/props_foliage/urban_hedge_256_128_high.mdl"
 	"classname" "prop_dynamic"
+	"StartDisabled" "1"
 	"targetname" "medium_route_blocker"
 }
 
@@ -351,6 +377,7 @@ add:
 	"angles" "0 130 0"
 	"model" "models/props_foliage/urban_hedge_256_128_high.mdl"
 	"classname" "prop_dynamic"
+	"StartDisabled" "1"
 	"targetname" "medium_route_blocker"
 }
 
@@ -361,6 +388,7 @@ add:
 	"angles" "0 -130 0"
 	"model" "models/props_foliage/urban_hedge_256_128_high.mdl"
 	"classname" "prop_dynamic"
+	"StartDisabled" "1"
 	"targetname" "medium_route_blocker"
 }
 
@@ -371,5 +399,6 @@ add:
 	"angles" "0 0 0"
 	"model" "models/props_foliage/urban_hedge_256_128_high.mdl"
 	"classname" "prop_dynamic"
+	"StartDisabled" "1"
 	"targetname" "medium_route_blocker"
 }
