--- a/stripper/maps/c5m1_waterfront.cfg
+++ b/stripper/maps/c5m1_waterfront.cfg
@@ -77,6 +77,15 @@ add:
 }
 
 {
+	"origin" "0 1 0"
+	"spawnflags" "1"
+	"targetname" "relay_routing_disabledbydefault"
+	"classname" "logic_auto"
+	"OnTrigger" "multi_route_blockerDisable0-1"
+	"OnTrigger" "multi_route_blockerDisableCollision0-1"
+}
+
+{
 	;Medium and Hard Route Blocker - Refrigerator in Bar 
 	"solid" "6"
 	"origin" "-1660 -1987 -375"
