--- a/stripper/maps/c5m3_cemetery.cfg
+++ b/stripper/maps/c5m3_cemetery.cfg
@@ -13,6 +13,14 @@ add:
 	"OutAnger" "DoHeadBangInValue0-1"
 }
 
+{
+	"origin" "0 1 0"
+	"spawnflags" "1"
+	"targetname" "relay_routing_disabledbydefault"
+	"classname" "logic_auto"
+	"OnMapSpawn" "relay_routing_wipeTrigger0-1"
+}
+
 ; will get fired by Plugin ONLY IN VERSUS, so it doesnt break coop
 ; unlike other maps, the blockades in c5m3 use OnMapSpawn and are not removable by default
 ; so add a removal function
