--- a/stripper/maps/c1m3_mall.cfg
+++ b/stripper/maps/c1m3_mall.cfg
@@ -101,6 +101,14 @@ add:
 	"OutAnger" "DoHeadBangInValue0-1"
 }
 
+{
+	"origin" "0 1 0"
+	"spawnflags" "1"
+	"targetname" "relay_routing_disabledbydefault"
+	"classname" "logic_auto"
+	"OnMapSpawn" "relay_routing_wipeTrigger0-1"
+}
+
 ; will get fired by Plugin ONLY IN VERSUS, so it doesnt break coop
 {
 	"origin" "0 0 0"
