--- a/stripper/maps/c5m2_park.cfg
+++ b/stripper/maps/c5m2_park.cfg
@@ -13,6 +13,14 @@ add:
 	"OutAnger" "DoHeadBangInValue0-1"
 }
 
+{
+	"origin" "0 1 0"
+	"spawnflags" "1"
+	"targetname" "relay_routing_disabledbydefault"
+	"classname" "logic_auto"
+	"OnMapSpawn" "relay_easy_route_spawnTrigger0-1"
+}
+
 ; control relays to spawn different routes
 
 ; easy path, no restrictions
@@ -70,15 +78,26 @@ add:
 ; credits to SkaP for most of it
 
 {
-	;Park Maze Blocker - Left Park entrance blocker
-	"solid" "6"
-	"origin" "-4778 -2864 -136"
-	"angles" "0 90 0"
-	"model" "models/props_wasteland/exterior_fence002c.mdl"
-	"classname" "prop_dynamic"
-	"StartDisabled" "1"
-	"targetname" "hard_route_blocker"
+    ;Park Maze Blocker - Left Park entrance blocker(right)
+    "solid" "6"
+    "origin" "-4800 -2864 -190"
+    "angles" "0 90 0"
+    "model" "models/props_fortifications/barricade001_128_reference.mdl"
+    "classname" "prop_dynamic"
+    "StartDisabled" "1"
+    "targetname" "hard_route_blocker"
 }
+
+{
+    ;Park Maze Blocker - Left Park entrance blocker (left)
+    "solid" "6"
+    "origin" "-4730 -2864 -190"
+    "angles" "0 90 0"
+    "model" "models/props_fortifications/barricade001_64_reference.mdl"
+    "classname" "prop_dynamic"
+    "StartDisabled" "1"
+    "targetname" "hard_route_blocker"
+}  
 
 ; through right park gate
 
@@ -247,15 +266,26 @@ add:
 ; credits to SkaP for it
 
 {
-	;Park Maze Blocker - Left Park entrance blocker
-	"solid" "6"
-	"origin" "-4778 -2864 -136"
-	"angles" "0 90 0"
-	"model" "models/props_wasteland/exterior_fence002c.mdl"
-	"classname" "prop_dynamic"
-	"StartDisabled" "1"
-	"targetname" "medium_route_blocker"
+    ;Park Maze Blocker - Left Park entrance blocker(right)
+    "solid" "6"
+    "origin" "-4800 -2864 -190"
+    "angles" "0 90 0"
+    "model" "models/props_fortifications/barricade001_128_reference.mdl"
+    "classname" "prop_dynamic"
+    "StartDisabled" "1"
+    "targetname" "medium_route_blocker"
 }
+
+{
+    ;Park Maze Blocker - Left Park entrance blocker (left)
+    "solid" "6"
+    "origin" "-4730 -2864 -190"
+    "angles" "0 90 0"
+    "model" "models/props_fortifications/barricade001_64_reference.mdl"
+    "classname" "prop_dynamic"
+    "StartDisabled" "1"
+    "targetname" "medium_route_blocker"
+}  
 
 ; through right park gate
 
