--- a/stripper/maps/c1m3_mall.cfg
+++ b/stripper/maps/c1m3_mall.cfg
@@ -107,6 +107,7 @@ add:
 	"targetname" "relay_routing_disabledbydefault"
 	"classname" "logic_auto"
 	"OnMapSpawn" "relay_routing_wipeTrigger0-1"
+	"OnMapSpawn" "relay_easy_route_spawnTrigger0-1"
 }
 
 ; will get fired by Plugin ONLY IN VERSUS, so it doesnt break coop
@@ -170,7 +171,6 @@ add:
 {
 	"origin" "0 0 0"
 	"targetname" "relay_routing_wipe"
-	"StartDisabled" "1"
 	"spawnflags" "0"
 	"classname" "logic_relay"
 	
@@ -237,7 +237,6 @@ add:
 	"angles" "0 135 0"
 	"model" "models/props_mall/mall_escalator2.mdl"
 	"classname" "prop_dynamic"
-	"StartDisabled" "1"
 	"targetname" "hard_route_blocker"
 }
 {
@@ -247,7 +246,6 @@ add:
 	"angles" "0 90 0"
 	"model" "models/props_fortifications\barricade001_128_reference.mdl"
 	"classname" "prop_dynamic"
-	"StartDisabled" "1"
 	"targetname" "hard_route_blocker"
 }
 {
@@ -257,7 +255,6 @@ add:
 	"angles" "0 90 0"
 	"model" "models/props_fortifications\barricade001_128_reference.mdl"
 	"classname" "prop_dynamic"
-	"StartDisabled" "1"
 	"targetname" "hard_route_blocker"
 }
 {
@@ -267,7 +264,6 @@ add:
 	"angles" "0 90 0"
 	"model" "models/props_fortifications\barricade001_128_reference.mdl"
 	"classname" "prop_dynamic"
-	"StartDisabled" "1"
 	"targetname" "hard_route_blocker"
 }
 {
@@ -277,7 +273,6 @@ add:
 	"angles" "0 90 0"
 	"model" "models/props_fortifications\barricade001_128_reference.mdl"
 	"classname" "prop_dynamic"
-	"StartDisabled" "1"
 	"targetname" "hard_route_blocker"
 }
 {
@@ -287,7 +282,6 @@ add:
 	"angles" "0 90 0"
 	"model" "models/props_fortifications\barricade001_128_reference.mdl"
 	"classname" "prop_dynamic"
-	"StartDisabled" "1"
 	"targetname" "hard_route_blocker"
 }
 {
@@ -297,7 +291,6 @@ add:
 	"angles" "0 90 0"
 	"model" "models/props_fortifications\barricade001_128_reference.mdl"
 	"classname" "prop_dynamic"
-	"StartDisabled" "1"
 	"targetname" "hard_route_blocker"
 }
 
