--- a/stripper/maps/c5m3_cemetery.cfg
+++ b/stripper/maps/c5m3_cemetery.cfg
@@ -18,7 +18,8 @@ add:
 	"spawnflags" "1"
 	"targetname" "relay_routing_disabledbydefault"
 	"classname" "logic_auto"
-	"OnMapSpawn" "relay_routing_wipeTrigger0-1"
+	"OnMapSpawn" "exit_blockerDisableCollision0-1"
+	"OnMapSpawn" "exit_blockerDisable0-1"
 }
 
 ; will get fired by Plugin ONLY IN VERSUS, so it doesnt break coop
