--- a/stripper/maps/c1m3_mall.cfg
+++ b/stripper/maps/c1m3_mall.cfg
@@ -10,12 +10,13 @@ modify:
 	{
 		"targetname" "removeme"
 	}
-	
+}
 ; also, second round bugfixing
 	
+modify:
+{
 	match:
 	{
-		"origin" "681 -627.127 328.681"
 		"targetname" "relay_stairwell_close"
 		"OnTrigger" "relay_door_minifinaleKill0-1"
 		"OnTrigger" "instructor_doorKill0-1"
@@ -34,10 +35,12 @@ modify:
 		"OnTrigger" "window_glowEnable0-1"
 		"OnTrigger" "instructor_windowEnable0-1"
 	}
-	
+}
+
+modify:
+{
 	match:
 	{
-		"origin" "781.778 -1184 343.726"
 		"targetname" "relay_hallway_close"
 		"OnTrigger" "relay_breakglassKill0-1"
 		"OnTrigger" "window_glowKill0-1"
@@ -58,7 +61,10 @@ modify:
 		"OnTrigger" "relay_door_minifinaleEnable0-1"
 		"OnTrigger" "instructor_doorEnable0-1"
 	}
-	
+}
+
+modify:
+{
 	match:
 	{
 		"OnUser1" "escalator_lower_01-railing_breakableKill0-1"
@@ -102,12 +108,13 @@ add:
 }
 
 {
-	"origin" "0 1 0"
+	"origin" "0 0 0"
 	"spawnflags" "1"
 	"targetname" "relay_routing_disabledbydefault"
 	"classname" "logic_auto"
-	"OnMapSpawn" "relay_routing_wipeTrigger0-1"
-	"OnMapSpawn" "relay_easy_route_spawnTrigger0-1"
+
+	"OnMapSpawn" "hard_route_blockerDisable0-1"
+	"OnMapSpawn" "hard_route_blockerDisableCollision0-1"
 }
 
 ; will get fired by Plugin ONLY IN VERSUS, so it doesnt break coop
@@ -226,11 +233,6 @@ add:
 ; SUPER HARD Route by untalented893
 
 {
-	;Removes glass from spawned escalator
-	"origin" "2147.62 -2589.29 305"
-	"classname" "func_breakable"
-}
-{
 	;Spawned escalator from event
 	"solid" "6"
 	"origin" "1968 -2768 120"
@@ -324,11 +326,16 @@ add:
 }
 
 
-
+filter:
+{
+	;Removes glass from spawned escalator
+	"origin" "2147.62 -2589.29 305"
+	"classname" "func_breakable"
+}
 
 
 ;Point of no return prop removal
-filter:
+
 {
 	;Prop Removal - Chair to get back over the point of no return
 	"origin" "1521 -808 280"
