--- a/stripper/maps/c2m1_highway.cfg
+++ b/stripper/maps/c2m1_highway.cfg
@@ -1,12 +1,89 @@
 add:
+
+; config existence checking entity
 {
-	;Exploit Blocker - Shortcut over bush and truck
-	"solid" "6"
-	"origin" "4605 7411 -739"
-	"angles" "0 180 0"
-	"model" "models/props_urban/fence002_256.mdl"
-	"classname" "prop_dynamic"
+	"origin" "0 0 0"
+	"targetname" "map_has_routing"
+	"noise" "0"
+	"minAngerRange" "1"
+	"maxAngerRange" "10"
+	"classname" "logic_director_query"
+	"OutAnger" "DoHeadBangInValue0-1"
 }
+
+{
+	"origin" "0 0 0"
+	"spawnflags" "0"
+	"targetname" "relay_routing_disabledbydefault"
+	"classname" "logic_auto"
+
+	"OnTrigger" "medium_route_blockerDisable0-1"
+	"OnTrigger" "medium_route_blockerDisableCollision0-1"
+	"OnTrigger" "hard_route_blockerDisable0-1"
+	"OnTrigger" "hard_route_blockerDisableCollision0-1"
+}
+
+; control relays to spawn different routes
+
+; on c2m1 paths:
+; route 1 is no blockers at all
+; route 2 is fences, but the ladder is unblocked
+; route 3 is fences and a blocked ladder
+
+
+; easy path, no restrictions
+{
+	"origin" "0 0 0"
+	"targetname" "relay_easy_route_spawn"
+	"spawnflags" "0"
+	"classname" "logic_relay"
+	
+	"OnTrigger" "medium_route_blockerDisable0-1"
+	"OnTrigger" "medium_route_blockerDisableCollision0-1"
+	"OnTrigger" "hard_route_blockerDisable0-1"
+	"OnTrigger" "hard_route_blockerDisableCollision0-1"
+}
+
+; medium path, add fences to force the roof route
+{
+	"origin" "0 0 0"
+	"targetname" "relay_medium_route_spawn"
+	"spawnflags" "0"
+	"classname" "logic_relay"
+	
+	"OnTrigger" "medium_route_blockerEnable0-1"
+	"OnTrigger" "medium_route_blockerEnableCollision0-1"
+	"OnTrigger" "hard_route_blockerDisable0-1"
+	"OnTrigger" "hard_route_blockerDisableCollision0-1"
+}
+
+; hard path, add fences to force the roof route, block the ladder return
+{
+	"origin" "0 0 0"
+	"targetname" "relay_hard_route_spawn"
+	"spawnflags" "0"
+	"classname" "logic_relay"
+	
+	"OnTrigger" "medium_route_blockerEnable0-1"
+	"OnTrigger" "medium_route_blockerEnableCollision0-1"
+	"OnTrigger" "hard_route_blockerEnable0-1"
+	"OnTrigger" "hard_route_blockerEnableCollision0-1"
+}
+
+{
+	"origin" "0 0 0"
+	"targetname" "relay_routing_wipe"
+	"spawnflags" "0"
+	"classname" "logic_relay"
+	
+	"OnTrigger" "medium_route_blockerDisable0-1"
+	"OnTrigger" "medium_route_blockerDisableCollision0-1"
+	"OnTrigger" "hard_route_blockerDisable0-1"
+	"OnTrigger" "hard_route_blockerDisableCollision0-1"
+}
+
+
+
 
 {
 	;Return Blocker - Fence to force point of no return
@@ -15,6 +92,7 @@ add:
 	"angles" "0 0 0"
 	"model" "models/props_urban/fence002_256.mdl"
 	"classname" "prop_dynamic"
+	"targetname" "medium_route_blocker"
 }
 
 {
@@ -24,6 +102,7 @@ add:
 	"angles" "0 0 0"
 	"model" "models/props_urban/fence002_128.mdl"
 	"classname" "prop_dynamic"
+	"targetname" "medium_route_blocker"
 }
 
 {
@@ -32,6 +111,21 @@ add:
 	"origin" "2385 6130 -640"
 	"angles" "0 0 0"
 	"model" "models/props_highway/plywood_02.mdl"
+	"classname" "prop_dynamic"
+	"targetname" "hard_route_blocker"
+}
+
+
+
+
+
+
+{
+	;Exploit Blocker - Shortcut over bush and truck
+	"solid" "6"
+	"origin" "4605 7411 -739"
+	"angles" "0 180 0"
+	"model" "models/props_urban/fence002_256.mdl"
 	"classname" "prop_dynamic"
 }
 
