--- a/stripper/maps/c1m1_hotel.cfg
+++ b/stripper/maps/c1m1_hotel.cfg
@@ -18,6 +18,15 @@ add:
 }
 
 {
+	;Exploit Blocker - Shortcut using a daredevil Jump from the first Window to Elevator Window
+	"solid" "6"
+	"origin" "2381 5626 2610"
+	"angles" "-90 0 0"
+	"model" "models/props_vents/vent_large_straight001.mdl"
+	"classname" "prop_dynamic"
+}
+
+{
     ;Exploit Blocker - Shortcut to stop the suicide jump from the CEDA room #1
 	"solid" "6"
     "origin" "1407 4975 2500"
