--- a/stripper/maps/c1m3_mall.cfg
+++ b/stripper/maps/c1m3_mall.cfg
@@ -334,7 +334,7 @@ filter:
 }
 
 
-;Point of no return prop removal
+;Point of no return prop removal - by SkaP
 
 {
 	;Prop Removal - Chair to get back over the point of no return
