--- a/stripper/maps/c2m1_highway.cfg
+++ b/stripper/maps/c2m1_highway.cfg
@@ -58,6 +58,7 @@ add:
 }
 
 ; hard path, add fences to force the roof route, block the ladder return
+; by SkaP
 {
 	"origin" "0 0 0"
 	"targetname" "relay_hard_route_spawn"
