--- a/stripper/maps/c5m1_waterfront.cfg
+++ b/stripper/maps/c5m1_waterfront.cfg
@@ -13,6 +13,16 @@ add:
 	"OnTrigger" "director_queryKill0-1"
 }
 
+{
+	"origin" "0 0 0"
+	"spawnflags" "1"
+	"targetname" "relay_routing_disabledbydefault"
+	"classname" "logic_auto"
+
+	"OnMapSpawn" "multi_route_blockerDisable0-1"
+	"OnMapSpawn" "multi_route_blockerDisableCollision0-1"
+}
+
 ; config existence checking entity
 {
 	"origin" "0 0 0"
@@ -93,7 +103,6 @@ add:
 	"model" "models/props_interiors/refrigerator_industrial01.mdl"
 	"classname" "prop_dynamic"
 	"targetname" "multi_route_blocker"
-	"StartDisabled" "1"
 }
 
 
