--- a/stripper/maps/c2m1_highway.cfg
+++ b/stripper/maps/c2m1_highway.cfg
@@ -17,10 +17,10 @@ add:
 	"targetname" "relay_routing_disabledbydefault"
 	"classname" "logic_auto"
 
-	"OnTrigger" "medium_route_blockerDisable0-1"
-	"OnTrigger" "medium_route_blockerDisableCollision0-1"
-	"OnTrigger" "hard_route_blockerDisable0-1"
-	"OnTrigger" "hard_route_blockerDisableCollision0-1"
+	"OnMapSpawn" "medium_route_blockerDisable0-1"
+	"OnMapSpawn" "medium_route_blockerDisableCollision0-1"
+	"OnMapSpawn" "hard_route_blockerDisable0-1"
+	"OnMapSpawn" "hard_route_blockerDisableCollision0-1"
 }
 
 ; control relays to spawn different routes
